[project]
name = "memora-wrapper"
version = "1.0.0"
description = "Python MCP runtime for the memora-wrapper Pi and Codex integration."
requires-python = ">=3.10"
dependencies = [
  "pydantic",
  "openai",
  "azure-identity",
  "omegaconf",
  "chromadb",
  "numpy",
  "rank-bm25",
  "tiktoken",
  "markdownify",
  "requests",
  "mcp",
]

[tool.uv]
package = false
